# ns_app

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
deploy/worker/: Dockerfile
ns_app/: __init__.py  __main__.py  settings.py
ns_app/db/: __init__.py  config.py  helpers.py
ns_app/db/dao/: task_dao.py
ns_app/db/migrations/models/: 1_20240320002600_init.py  2_20240320002642_add_tables.py  3_20240322022454_update_metadata.py
ns_app/db/models/: __init__.py  files_model.py  task_model.py
ns_app/dto/: __init__.py  base.py  task.py
ns_app/enum/: __init__.py  metadata.py  task.py
ns_app/services/: __init__.py
ns_app/services/redis/: __init__.py  lifetime.py
ns_app/services/s3/: __init__.py  paginator.py
ns_app/services/spark/: __init__.py  client.py  reader.py  session.py  udf.py  writer.py
ns_app/tasks/: helpers.py  worker.py
ns_app/web/: __init__.py  application.py  lifetime.py
ns_app/web/api/: __init__.py  router.py
ns_app/web/api/monitoring/: __init__.py  views.py
ns_app/web/api/tasks/: __init__.py  schema.py  views.py
ns_app/workers/: __init__.py  broker.py  helpers.py  tasks.py
