[tool.poetry]
authors = ["Roman Evtukh"]
description = ""
maintainers = ["Roman Evtukh"]
name = "ns_app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aerich = "^0.7.2"
asyncpg = "^0.29.0"
fastapi = "^0.110.0"
httptools = "^0.6.1"
orjson = "^3.9.15"
pefile = "^2023.2.7"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
pyspark = "^3.5.1"
python = "^3.12.2"
uvicorn = {version = "^0.28.0", extras = ["standard"]}
uvloop = "^0.19.0"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.6.2"
ruff = "^0.3.2"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv"
]
indent-width = 4
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["D100", "ANN101", "ANN204", "D105", "D203", "D212", "ISC001", "COM812"]
select = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # ignores: S101 (assert is fine in tests)

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.isort]
case-sensitive = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
